# ozone-realm

./: README.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/backend/: package.json
apps/backend/src/: main.ts
apps/frontend/: next.config.js  package.json
apps/frontend/src/app/: global.css  layout.tsx  page.tsx
apps/frontend/src/types/: GameTypes.ts
apps/my-nest-app/: jest.config.ts  package.json
apps/my-nest-app-e2e/: jest.config.ts  package.json  tsconfig.json
apps/ui/: next.config.ts  package.json
apps/ui/public/: manifest.json
apps/ui/src/app/: globals.css  layout.tsx  page.tsx
apps/ui/src/client/: RootLayoutClient.tsx
apps/ui/src/hooks/: useSocket.ts
apps/ws/: package.json
apps/ws/src/: main.ts
backend/: .gitignore  Cargo.toml
backend/src/: main.rs  server.rs
backend/src/auth/: jwt.rs
backend/src/db/: mongo.rs  user.rs
backend/src/handlers/: auth_handler.rs
backend/src/models/: user.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/docs/: page.tsx
src/app/game/: page.tsx
src/app/marketplace/: page.tsx
src/components/CustomButton/: index.tsx
src/components/XODrop/: index.tsx
src/components/navbar/: index.tsx
src/data/: GameList.ts
src/types/: GamePiece.ts
ui/: package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/about/: page.tsx
ui/src/components/: StartScreen.tsx
ui/src/libs/: ScrollWrapper.tsx
(+38 files in other folders)
