[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
mongodb = { version = "2.8", features = ["tokio-runtime"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.12"
jsonwebtoken = "7.2"
dotenv = "0.15"
chrono = "0.4"
hyper = "0.14"
